--- a/index.html
+++ b/index.html
@@ -1,56 +1,88 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Resume</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
-        <div class="nav">
-          <header>
-            <nav>
-              <ul>
-                <li><a href="index.html">Resume</a></li>
-                <li><a href="pages/mobileminigames.html">Mobile Minigames</a></li>
-              </ul>
-            </nav>
-          </header>
-        </div>
-      </div>
-
-    <div id="content" class="content">
-        <div id="summary" class="summary">
-            <h2>Summary:</h2>
+  <div class="container">
+    <div class="main">
+        <div id="MMHeader" class="MMHeader">
+            <h2>Mobile Minigames:</h2>
             <p>
-                I am a programmer with about <b>4 years</b> of <b>game development</b> experience.<br>
-                Prior to becomming a game dev, I spend most of my free time enjoying games myself.<br>
-                I am Passionate about life and technology to make the world a better place.
+                <a href="https://mobileminigames.com/">Mobile Minigames</a> is a top grossing mobile game with more than 3 million downloads.<br>
+                I am responsible for the client logic of several main features of the game, some of which can be seen below.
             </p>
-            <ul class="org-ul">
-                <li>2018-present: Living and working with the <a href="https://singularitygroup.net/">Singularity Group</a></li>
-                <li>2018-2018: Studied Applied Computer Science at the University of Heilbronn (discontinued)</li>
-            </ul>
         </div>
-        <div id="skills" class="skills">
-            <h2>Skills/Experience</h2>
-            <ul class="org-ul">
-                <li>
-                    <b>Developed a <a href="https://play.google.com/store/apps/details?id=com.gamingforgood.clashofstreamers">mobile game</a> with csharp / unity</b>
-                    <ul class="org-ul">
-                        <li>Unity UI logic, game development, responsible for several features</li>
-                    </ul>
-                </li>
-                <li>
-                    <b>FrontEnd:</b>
-                    <ul class="org-ul">
-                        <li>Some CSS, HTML and js (willingness to learn more)</li>
-                    </ul>
-                </li>
-            </ul>
+      <div class="feature-list">
+
+        <div class="feature" id="feature-1">
+          <h2>Achievements</h2>
+          <p>
+            The Achievement menu presents a list of achievements that can be unlocked by the player while playing the game. 
+            Completing achievements grants rewards in the form of "chests" and permanent buffs.
+            This menu also lets players manage their strongest pets. 
+          </p>
+          <div>
+              <img src="gifs/achievements.gif" alt="A GIF" width="600" height="337" autoplay>
+              <i class="caption"><br>browsing the achievement menu and opening some chests</i>
+          </div>
         </div>
-        <div id="info" class="info">
-            <p><b>Availability:</b> Available for remote work. Flexible schedule.</p>
-            <p><b>Location:</b> Forst(Lausitz) Germany.</p>
-            <p><b>Languages:</b> English, German.</p>
+        <div class="feature" id="feature-2">
+            <h2>Auction House</h2>
+            <p>
+                Collectibles and NFTs can be traded in the Auction House, the center of the Mobile Minigames economy.
+                It is possible to create buy orders and auctions, see price developments etc.
+            </p>
+            <div>
+                <img src="gifs/auctionhouse.gif" alt="A GIF" width="600" height="337" autoplay>
+                <i class="caption"><br>creating a pet auction and buying a pet nft</i>
+            </div>
         </div>
-<body>
+        <div class="feature" id="feature-3">
+            <h2>Palace</h2>
+            <p>
+                The Palace feature allows players to watch videos and streams to earn item drops, play the slot machine, claim chests and giveaways. 
+            </p>
+            <div>
+                <img src="gifs/palace.gif" alt="A GIF" width="600" height="337" autoplay>
+                <i class="caption"><br>claiming chests, spinning the slot machine while getting stream drops<br>(the in-game video player is disabled in this recording)</i>
+            </div>
+        </div>
+        <div class="feature" id="feature-5">
+            <h2>Replay Book</h2>
+            <p>
+              The Replay feature records gameplay in the background and generates replays of special events,
+              such as lucky slot spins. These replays can be viewed and interacted with in the Replay book.
+            </p>
+            <div>
+                <img src="gifs/replaybook.gif" alt="A GIF" width="600" height="337" autoplay>
+                <i class="caption"><br>getting a good slot spin, posting the generated replay.<br>(the in-game video player is disabled in this recording)</i>
+            </div>
+        </div>
+        <div class="feature" id="feature-4">
+            <h2>Seasonal Challenge</h2>
+            <p>
+                The Seasonal Challenge is a monthly event that requires players to collect the ingame currency "Legendary Stars".<br>
+                For every 50 stars collected, players are able to claim rewards. 
+            </p>
+            <div>
+                <img src="gifs/seasonalchallenge.gif" alt="A GIF" width="600" height="337" autoplay>
+                <i class="caption"><br>claiming completed milestone rewards, buying the "Golden Battle Pass" in app purchase to get locked rewards</i>
+            </div>
+        </div>
+        <div class="feature" id="feature-4">
+            <h2>Streamer Talents</h2>
+            <p>
+                The Streamer Talents menu lets a player customize the talents of their heroes and improve them in combat.
+            </p>
+            <div>
+                <img src="gifs/streamertalents.gif" alt="A GIF" width="600" height="337" autoplay>
+                <i class="caption"><br>selecting talents for some heroes, then winning a fight with buffed heroes</i>
+            </div>
+        </div>
+
+      </div>
+    </div>
+  </div>
+</body>
+</html>
