--- a/portfolio.html
+++ b/portfolio.html
@@ -14,6 +14,7 @@
 	<link rel="stylesheet" href="css/screen.css" />
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 	<script src="js/fancybox/jquery.fancybox.pack.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/4.1.4/imagesloaded.pkgd.min.js"></script>
 	<script src="js/main.js"></script>
 	<!--[if lt IE 9]>
 		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
